--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vue-router": "^3.4.6",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "vuex-router-sync": "^2.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
