--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vue-router": "^3.4.6",
+    "vue-tag-selector": "^0.2.4",
     "vuex": "^3.5.1",
     "vuex-router-sync": "^2.1.1"
   },
