--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "lodash": "^4.17.20",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
+    "vue-input-tag": "^2.0.7",
+    "vue-loading-overlay": "^3.4.2",
     "vue-router": "^3.4.6",
     "vue-tag-selector": "^0.2.4",
     "vuex": "^3.5.1",
